@@ -1,4 +1,5 @@
 #include "helpers.h"
+#include "eventTerm.h"
 
 int LindaHelpers::NR_OF_EVENTS; //!< The number of events in the analyzed open nets.
 pnapi::Place** LindaHelpers::EVENT_PLACES; //!< The pointers to the interface places, inducing a global ID for each events: n-th element = n-th event.
@@ -25,6 +26,154 @@ const std::string LindaHelpers::intToStr(const int x) {
 	if (!(o << x))
 		return "ERROR";
 	return o.str();
+}
+
+
+void FlowMatrix::computeTInvariants() {
+
+	int firstPlace = net->getInterfacePlaces().size();
+	int lastPlace = firstPlace + net->getInternalPlaces().size() - 1;
+
+	for (int i = firstPlace; i <= lastPlace; ++i) {
+
+	//	std::cerr << "New index is " << i << std::endl;
+
+		ListElement<int*>* newRows = 0;
+		ListElement<int*>* firstNew = 0;
+
+		ListElement<int*>* current = root;
+		while (current != 0) {
+			ListElement<int*>* currentComp = current->next;
+
+			int currNr = current->element[i];
+
+			while (currentComp != 0) {
+				int currCompNr = currentComp->element[i];
+				if (currNr < 0 &&  currCompNr > 0 || currNr > 0 &&  currCompNr < 0) {
+					int* newRow = new int[width];
+
+					int fac = LindaHelpers::abs(currNr);
+					int facComp = LindaHelpers::abs(currCompNr);
+
+
+					for (int init = 0; init < width; ++init) {
+						newRow[init] = facComp*current->element[init] + fac*currentComp->element[init];
+					}
+					ListElement<int*>* toInsert = new ListElement<int*>(newRow,newRows,0);
+
+					if (newRows == 0) {
+						firstNew = toInsert;
+						newRows = toInsert;
+
+					} else {
+						newRows->next = toInsert;
+					}
+
+					newRows = toInsert;
+
+	//				std::cerr << "Inserted row." << std::endl;
+
+				}
+
+				currentComp = currentComp->next;
+
+			}
+
+			current = current->next;
+			}
+
+	//	std::cerr << "deleting lines.." << std::endl;
+		ListElement<int*>* current2 = root;
+		while (current2 != 0) {
+
+			if (current2->element[i] != 0) {
+				if (current2 == root) {
+					root = current2->next;
+					if (current2->next != 0) {
+						current2->prev = 0;
+					} else {
+						last = 0;
+					}
+					delete[] current2->element;
+					delete current2;
+					current2 = root;
+				} else {
+					ListElement<int*>* current3 = current2->next;
+					current2->prev->next = current2->next;
+					if (current2->next != 0) {
+						current2->next->prev = current2->prev;
+					} else {
+						last = current2->prev;
+					}
+					delete[] current2->element;
+					delete current2;
+					current2 = current3;
+				}
+			} else {
+
+				current2 = current2->next;
+			}
+		}
+
+
+	//	std::cerr << "adding new lines.." << std::endl;
+		if (newRows != 0) {
+			if (root == 0) {
+				root = firstNew;
+				last = newRows;
+			} else {
+				firstNew->prev = last;
+				last->next = firstNew;
+				last = newRows;
+			}
+		}
+	/*	std::cerr << "new matrix.." << std::endl;
+
+		this->output();
+*/
+
+
+	}
+
+	width = firstPlace;
+
+
+}
+
+
+void FlowMatrix::createTerms() {
+
+	ListElement<EventTerm*>* currentInList = 0;
+	ListElement<int*>* current = root;
+	while (current != 0) {
+			for (int i = 0; i < width-1; ++i) {
+				if (current->element[i] > 0) {
+					int e1 = i;
+					int f1 = current->element[i];
+					for (int j = i+1; j < width; ++j) {
+						if (current->element[j] > 0) {
+							int e2 = j;
+							int f2 = -1*current->element[j];
+
+							EventTerm* term = new AddTerm(new MultiplyTerm(new BasicTerm(e1),f1), new MultiplyTerm(new BasicTerm(e2),f2));
+
+							ListElement<EventTerm*>* newElem = new ListElement<EventTerm*>(term,0,0);
+
+							if (terms == 0) {
+								terms = newElem;
+								currentInList = newElem;
+							} else {
+								currentInList->next = newElem;
+								newElem->prev = currentInList;
+								currentInList = newElem;
+							}
+
+						}
+					}
+				}
+			}
+			current = current->next;
+		}
 }
 
 
